syntax = "proto3";

package medical.backend;

import "scalapb/scalapb.proto";

service PatientClient {
  // Sends a greeting
  rpc find (PatientRequest) returns (stream PatientReply) {}
}

message PatientRequest {
  string name = 1;
}

message PatientReply {
  string id = 1;
  string name = 2;
}
